# float-search

./: .gitignore  .style.yapf  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
float_search/: __init__.py  config.py
float_search/helper/: vector.py
float_search/searcher/: __init__.py  base_vector_search.py  in_memory_vector_search.py
float_search/vectorizer/: __init__.py  random_vectorizer.py
tests/: config.py  test_float_search.py  test_vector_search_api.py
tests/search/: test_faiss_vector.py  test_in_memory_vector_search.py  test_pinecone_vector_search.py
tests/searcher/: test_base_vector_search.py  test_faiss_vector.py  test_in_memory_vector_search.py
tests/utils/: dummy_documents.py  embedding.py
vector_search_api/: config.py  version.py
vector_search_api/exceptions/: __init__.py  search.py
vector_search_api/helper/: vector.py
vector_search_api/schema/: __init__.py  pinecone.py  result.py
vector_search_api/search/: __init__.py  base_vector_search.py  faiss_vector_search.py  in_memory_vector_search.py  pinecone_vector_search.py
vector_search_api/searcher/: base_vector_search.py  faiss_vector_search.py
