[tool.poetry]
name = "float-search"
version = "0.1.0"
description = "Vector-Search API of databases."
authors = ["AllenChou <f1470891079@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
